Add StateMachineEditingDemo using Stateless library
- Demonstrates FSM pattern for enforcing single-row editing
- States: Viewing, Editing, Adding
- Triggers: Edit, Add, Save, Cancel
- CanFire() automatically disables invalid transitions
- Shows current state and transition history in UI

--- a/src/BlazorKoans.App/BlazorKoans.App.csproj
+++ b/src/BlazorKoans.App/BlazorKoans.App.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Radzen.Blazor" Version="8.6.3" />
+    <PackageReference Include="Stateless" Version="5.20.0" />
   </ItemGroup>
 
 </Project>
