Add FluxorEditingDemo to compare with Stateless pattern
- Fluxor (Redux pattern) for state management
- State, Actions, Reducers in Store/EmployeeEdit/
- Same editing constraints as StateMachineEditingDemo
- Shows pattern comparison in UI

--- a/src/BlazorKoans.App/BlazorKoans.App.csproj
+++ b/src/BlazorKoans.App/BlazorKoans.App.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Fluxor.Blazor.Web" Version="6.9.0" />
     <PackageReference Include="Radzen.Blazor" Version="8.6.3" />
     <PackageReference Include="Stateless" Version="5.20.0" />
   </ItemGroup>
